tests/str_format_alloc_arg_type_bad.stderr
tests/str_format_alloc_arg_type_bad.hop:3:31: error: HOP2075: consteval error: format string error: {f} requires floating-point argument
