tests/str_format_alloc_arg_type_bad.hop
// Verifies allocated format validates const format strings at compile time.
fn main() {
	var s *str = format("x={f}", 1 as i64)
	dealloc s
}
